fix medicalRecords validations
