# src/routes/medicalRecords.js
@@ -10,16 +10,46 @@ const {
   deleteMedicalRecord,
 } = require("../controllers/medicalRecordsController");
 const isAuthenticated = require("../utils/authHelpers").isAuthenticated;
-const addDoctorRules = require("../validations/medicalRecordsValidation")();
+const addMedicalRecordsRules =
+  require("../validations/medicalRecordsValidation")();
 const addMongoIdRules = require("../validations/mongoIdValidation")();
 const checkData = require("../validations/checkDataHelper");
 
 router.get("/", getAllMedicalRecords);
-router.get("/:medicalRecordId", getMedicalRecordById);
-router.get("/doctor/:doctorId", getMedicalRecordsByDoctorId);
-router.get("/patient/:patientId", getMedicalRecordsByPatientId);
-router.post("/", isAuthenticated, createMedicalRecord);
-router.put("/:medicalRecordId", isAuthenticated, updateMedicalRecord);
-router.delete("/:medicalRecordId", isAuthenticated, deleteMedicalRecord);
+router.get("/:id", addMongoIdRules, checkData, getMedicalRecordById);
+router.get(
+  "/doctor/:id",
+  addMongoIdRules,
+  checkData,
+  getMedicalRecordsByDoctorId,
+);
+router.get(
+  "/patient/:id",
+  addMongoIdRules,
+  checkData,
+  getMedicalRecordsByPatientId,
+);
+router.post(
+  "/",
+  isAuthenticated,
+  addMedicalRecordsRules,
+  checkData,
+  createMedicalRecord,
+);
+router.put(
+  "/:id",
+  isAuthenticated,
+  addMongoIdRules,
+  addMedicalRecordsRules,
+  checkData,
+  updateMedicalRecord,
+);
+router.delete(
+  "/:id",
+  isAuthenticated,
+  addMongoIdRules,
+  checkData,
+  deleteMedicalRecord,
+);
 
 module.exports = router;
